--- a/readme
+++ b/readme
@@ -13,3 +13,5 @@ Delete Wall post from our website ( post automatically deleted from yammer's wal
 http://www.facebook.com/chitresh.goyal
 
 mail: chitreshstar1@gmail.com
+
+Skype: chitreshg     
